...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/breakfast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:fontFamily="muli_bold"
                        android:padding="5dp"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/exercise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"
                        android:fontFamily="muli_bold"
...
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFoodLog"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:elevation="10dp"
...
                        android:text="@string/foodLog"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        app:cornerRadius="50dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnExerciseLog"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="2"
                        android:elevation="10dp"
                        android:fontFamily="@font/muli"
                        android:gravity="center"
                        android:onClick="btnExerciseLogOnClick"
                        android:text="@string/exerciseLog"
                        android:textStyle="bold"
                        app:cornerRadius="50dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
...
                        android:textAlignment="center"
                        app:cornerRadius="10dp"
                        android:drawableTop="@drawable/add_notification"
                        tools:ignore="OnClick" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnUpdateUserInfo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:elevation="10dp"
...
