<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.HomeActivity">

    <ImageView
        android:id="@+id/wave_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="ImageView"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave"
        app:layout_collapseMode="parallax"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/greeting"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wave_image" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_centerHorizontal="true">

        <com.timqi.sectorprogressview.ColorfulRingProgressView
            android:id="@+id/crpv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bgColor="#e1e1e1"
            app:fgColorEnd="#ff4800"
            app:fgColorStart="#ffe400"
            app:percent="0"
            app:startAngle="0"
            app:strokeWidth="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="\tCalories \nRemaining\n"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_light"
            android:textSize="13sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toStartOf="@id/frame"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/textTotalIntake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="0"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="EATEN"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_light"
            tools:ignore="RtlCompat" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/frame"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textTotalBurned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="0"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:singleLine="true"
            android:text="BURNED"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_light"
            tools:ignore="RtlCompat" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>